k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monacair-website
  labels:
    app: monacair-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monacair-website
  template:
    metadata:
      labels:
        app: monacair-website
    spec:
      imagePullSecrets:
        - name: github-registry-secret
      containers:
        - name: monacair-website
          image: ${DOCKER_REGISTRY}/${DOCKER_REPOSITORY}:${GITHUB_SHA}
          ports:
            - containerPort: 3000
